--- a/Resources/Lang/Lang.en.resx
+++ b/Resources/Lang/Lang.en.resx
@@ -117,6 +117,83 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Bg_Main" xml:space="preserve">
+    <value>Welcome to MultiBranchTexter
+Open navigation file by Ctrl+O or drag in
+Create navigation file by Ctrl+Shift+N</value>
+  </data>
+  <data name="Set_CheckUpdate" xml:space="preserve">
+    <value>Check update</value>
+  </data>
+  <data name="Set_Color" xml:space="preserve">
+    <value>Color settings</value>
+  </data>
+  <data name="Set_CountComment" xml:space="preserve">
+    <value>Count comments' words</value>
+  </data>
+  <data name="Set_CurrentVer" xml:space="preserve">
+    <value>Current version  </value>
+  </data>
+  <data name="Set_DarkMode" xml:space="preserve">
+    <value>Darkmode</value>
+  </data>
+  <data name="Set_Default" xml:space="preserve">
+    <value>Default</value>
+  </data>
+  <data name="Set_DoubleCtrlS" xml:space="preserve">
+    <value>Double Ctrl+S to save the whole file</value>
+  </data>
+  <data name="Set_DoubleEnter" xml:space="preserve">
+    <value>Double ENTER not to split fragment</value>
+  </data>
+  <data name="Set_ReadMe" xml:space="preserve">
+    <value>README</value>
+  </data>
+  <data name="Set_ScrollInertia" xml:space="preserve">
+    <value>Awake scrollbar's inertia</value>
+  </data>
+  <data name="Set_TextMargin" xml:space="preserve">
+    <value>Text margin</value>
+  </data>
+  <data name="Set_ViewWeb" xml:space="preserve">
+    <value>View Github</value>
+  </data>
+  <data name="TB_Create" xml:space="preserve">
+    <value>New(Ctrl+Shift+N)</value>
+  </data>
+  <data name="TB_FontDown" xml:space="preserve">
+    <value>Fontsize down(Alt+Down)</value>
+  </data>
+  <data name="TB_FontUp" xml:space="preserve">
+    <value>Fontsize up(Alt+Up)</value>
+  </data>
+  <data name="TB_FullSc" xml:space="preserve">
+    <value>Fullscreen</value>
+  </data>
+  <data name="TB_Open" xml:space="preserve">
+    <value>Open(Ctrl+O)</value>
+  </data>
+  <data name="TB_Output" xml:space="preserve">
+    <value>Output</value>
+  </data>
+  <data name="TB_OutputJSON" xml:space="preserve">
+    <value>Output JSON</value>
+  </data>
+  <data name="TB_OutputPic" xml:space="preserve">
+    <value>Output nodes' picture .png</value>
+  </data>
+  <data name="TB_OutputTxt" xml:space="preserve">
+    <value>Output nodes‘ text individually</value>
+  </data>
+  <data name="TB_Restore" xml:space="preserve">
+    <value>Restore(Esc)</value>
+  </data>
+  <data name="TB_Save" xml:space="preserve">
+    <value>Save(Ctrl+Alt+S)</value>
+  </data>
+  <data name="TB_SaveAs" xml:space="preserve">
+    <value>Save As(Ctrl+Shift+S)</value>
+  </data>
   <data name="Win_Close" xml:space="preserve">
     <value>Close</value>
   </data>
