--- a/Resources/Lang/Lang.en.resx
+++ b/Resources/Lang/Lang.en.resx
@@ -271,6 +271,9 @@ This may cause chaos, and this action cannot be cancelled. </value>
   <data name="Msg_SaveFile" xml:space="preserve">
     <value>File has been modified. Save it now?</value>
   </data>
+  <data name="Msg_SaveNodes" xml:space="preserve">
+    <value>Nodes have been modified, save now?</value>
+  </data>
   <data name="Msg_SaveTxt" xml:space="preserve">
     <value>Text has been modified. Save it now?</value>
   </data>
@@ -417,6 +420,12 @@ $$ will be replaced by file name, \$ will be replaced by $</value>
   </data>
   <data name="Tab_Char" xml:space="preserve">
     <value>Char: </value>
+  </data>
+  <data name="Tab_CloseAll" xml:space="preserve">
+    <value>Close all tabs</value>
+  </data>
+  <data name="Tab_CloseOther" xml:space="preserve">
+    <value>Close other tabs</value>
   </data>
   <data name="Tab_EndCond" xml:space="preserve">
     <value>End condition</value>
