修复重大巴哥，该问题曾导致连线断开

--- a/Resources/Lang/Lang.zh-CHS.resx
+++ b/Resources/Lang/Lang.zh-CHS.resx
@@ -266,7 +266,8 @@
   </data>
   <data name="Msg_Rearrange" xml:space="preserve">
     <value>你即将重新排列所有节点！
-这可能造成短暂的混乱，并且此操作不可撤销！</value>
+这可能造成短暂的混乱，并且此操作不可撤销！
+无法处理循环，如果连线太复杂，请慎重使用！</value>
   </data>
   <data name="Msg_SaveFile" xml:space="preserve">
     <value>尚未保存，是否保存？</value>
