--- a/Resources/Lang/Lang.en.resx
+++ b/Resources/Lang/Lang.en.resx
@@ -266,7 +266,8 @@ All connecting lines of these nodes will be deleted, and this action cannot be c
   </data>
   <data name="Msg_Rearrange" xml:space="preserve">
     <value>You are going to rearrange nodes' picture! 
-This may cause chaos, and this action cannot be cancelled. </value>
+This may cause chaos, and this action cannot be cancelled! 
+It will get error if there is cycle, so if the picture is too complex, please be care to use this function! </value>
   </data>
   <data name="Msg_SaveFile" xml:space="preserve">
     <value>File has been modified. Save it now?</value>
